# deepdivee

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  mozilla_ai_based_improvements.md  pyproject.toml
.gitea/workflows/: build-and-push.yaml
.github/workflows/: ci.yml
docs/agents/: architecture-review-agent.md  coding-agent.md  data-model-agent.md  deployment-agent.md  estimation-agent.md  testing-agent.md
kubernetes/: configmap-nginx-tls.yaml  configmap.yaml  deployment.yaml  secret.yaml  service.yaml
scripts/: smoke_test.py
src/deepdive/: main.py
src/deepdive/agent/: agent.py  embedders.py  memory.py  rag.py  templating.py
src/deepdive/agent/templates/: analysis_prompt.jinja2  context_chunk.jinja2  system_prompt.jinja2
src/deepdive/api/: exceptions.py  routes.py  schemas.py  services.py
src/deepdive/core/: config.py
src/deepdive/db/: models.py  repository.py  session.py
tests/: conftest.py  test_agent.py  test_api.py  test_embedders.py  test_embeddings.py  test_memory.py  test_services.py  test_templating.py
