[project]
name = "deepdive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "any-agent[langchain]>=1.18.0",
    "any-llm-sdk[openai]>=1.8.2",
    "asyncpg>=0.31.0",
    "fastapi>=0.129.2",
    "httpx>=0.28.1",
    "langgraph>=0.3.0",
    "langgraph-checkpoint-redis>=0.4.0",
    "pgvector>=0.4.2",
    "pip>=26.0.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
    "redis>=7.2.0",
    "ruff>=0.15.6",
    "sentence-transformers>=3.0.0",
    "sqlalchemy>=2.0.46",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "strict"

[tool.pyright]
venvPath = "."
venv = ".venv"
extraPaths = ["src"]
